fix: Increase Header gap

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,7 +5,7 @@
 		align-items: center;
 		display: flex;
 		flex-wrap: wrap;
-		gap: 1.5em;
+		gap: 2.5em;
 		justify-content: space-between;
 		margin: 1em auto;
 
